# DisplayController

./: .actrc  .clinerules  .clinerules.md  CMakeLists.txt  LICENSE  README.md  clinerules-template.md  config.json.sample  test_json.cpp  vcpkg.json
.cline/memory/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.github/workflows/: ci.yml
SwitchBotLightSensor/: CMakeLists.txt
SwitchBotLightSensor/include/: HttpClient.h  SwitchBotException.h  SwitchBotLightSensor.h
SwitchBotLightSensor/src/: HttpClient.cpp  SwitchBotLightSensor.cpp
SwitchBotLightSensor/test/: CMakeLists.txt  SwitchBotLightSensorTest.cpp
docs/: brightness_calibration_design.md  brightness_daemon_design.md  brightness_daemon_tasks.md  calibration_implementation_plan.md  config_validation_improvement.md  console_window_design.md  design.md  dll_conversion_plan.md  implementation_tasks.md  plugin_architecture_design.md  plugin_config_restructure.md  plugin_name_config_design.md  string_encoding_fix.md  switchbot_config_design.md  switchbot_config_setup.md  switchbot_integration.md  switchbot_lightsensor_dll_design.md  switchbot_lightsensor_fix.md  system_brightness_integration.md  vcpkg_migration_plan.md
docs/developer/: api_reference.md  architecture.md  local_ci_testing.md  plugin_development.md
docs/samples/: config.json.sample
docs/user/: configuration.md  getting_started.md
docs/user/samples/: config.json.sample  config_error_cases.json.sample
memory-bank/: activeContext.md  ci_implementation_plan.md  config_reload_button_implementation_plan.md  decisionLog.md  monitor_config_implementation_plan.md  productContext.md  progress.md  refactoring_plan.md
plugins/DummyLightSensor/: CMakeLists.txt
plugins/DummyLightSensor/include/: DummyLightSensor.h  DummyPlugin.h
plugins/DummyLightSensor/src/: DummyLightSensor.cpp  DummyPlugin.cpp
plugins/SwitchBotLightSensor/: CMakeLists.txt
plugins/SwitchBotLightSensor/include/: HttpClient.h  SwitchBotException.h  SwitchBotLightSensor.h  SwitchBotPlugin.h
plugins/SwitchBotLightSensor/src/: HttpClient.cpp  SwitchBotLightSensor.cpp  SwitchBotPlugin.cpp
src/: BrightnessDaemon.cpp  BrightnessManager.cpp  BrightnessManager.h  BrightnessSync.cpp  BrightnessSync.h  ConfigManager.cpp  ConfigManager.h  DummyLightSensor.cpp  DummyLightSensor.h  ILightSensor.h  ILightSensorPlugin.h  MonitorController.cpp  MonitorController.h  PluginLoader.cpp  PluginLoader.h  StringUtils.cpp  StringUtils.h  SystemBrightnessMonitor.cpp  SystemBrightnessMonitor.h  main.cpp
src/common/: CMakeLists.txt  StringUtils.h
test/: CMakeLists.txt  PluginLoaderTest.cpp
